# face-crop

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  NbcRect.cpp  NbcRect.hpp  README.md  Zoom.cpp  Zoom.hpp  main.cpp  main.h  main.hpp
